# rust-multi-command

./: Cargo.toml
src/: command.rs  git.rs  lib.rs  main.rs
testable/: test.json
