[package]
name = "rust-multi-command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
cursive = { version = "0.20.0", default-features = false, features = ["pancurses-backend"] }
lazy_static = "1.4.0"
retry = "2.0.0"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
uuid = { version = "1.3.2", features = ["v4"] }
